--- a/.travis.yml
+++ b/.travis.yml
@@ -8,22 +8,22 @@ env:
     - CONAN_UPLOAD=1
     - CONAN_REFERENCE="Boost/1.64.0"
     - CONAN_USERNAME="lasote"
-    - CONAN_CHANNEL="stable"
+    - CONAN_CHANNEL="testing"
     - CONAN_TOTAL_PAGES=8
     - CONAN_STABLE_BRANCH_PATTERN="release/*"
 
   matrix:
-
+       
     - CONAN_GCC_VERSIONS=4.8 CONAN_CURRENT_PAGE=1 CONAN_USE_DOCKER=1 CONAN_TOTAL_PAGES=4
     - CONAN_GCC_VERSIONS=4.8 CONAN_CURRENT_PAGE=2 CONAN_USE_DOCKER=1 CONAN_TOTAL_PAGES=4
     - CONAN_GCC_VERSIONS=4.8 CONAN_CURRENT_PAGE=3 CONAN_USE_DOCKER=1 CONAN_TOTAL_PAGES=4
     - CONAN_GCC_VERSIONS=4.8 CONAN_CURRENT_PAGE=4 CONAN_USE_DOCKER=1 CONAN_TOTAL_PAGES=4
-
+    
     - CONAN_GCC_VERSIONS=4.9 CONAN_CURRENT_PAGE=1 CONAN_USE_DOCKER=1 CONAN_TOTAL_PAGES=4
     - CONAN_GCC_VERSIONS=4.9 CONAN_CURRENT_PAGE=2 CONAN_USE_DOCKER=1 CONAN_TOTAL_PAGES=4
     - CONAN_GCC_VERSIONS=4.9 CONAN_CURRENT_PAGE=3 CONAN_USE_DOCKER=1 CONAN_TOTAL_PAGES=4
     - CONAN_GCC_VERSIONS=4.9 CONAN_CURRENT_PAGE=4 CONAN_USE_DOCKER=1 CONAN_TOTAL_PAGES=4
-
+    
     - CONAN_GCC_VERSIONS=5.2 CONAN_CURRENT_PAGE=1 CONAN_USE_DOCKER=1
     - CONAN_GCC_VERSIONS=5.2 CONAN_CURRENT_PAGE=2 CONAN_USE_DOCKER=1
     - CONAN_GCC_VERSIONS=5.2 CONAN_CURRENT_PAGE=3 CONAN_USE_DOCKER=1
