Switch to personal channel to test builds

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,7 @@ environment:
     
     CONAN_UPLOAD: 1
     CONAN_REFERENCE: "Boost/1.64.0"
-    CONAN_USERNAME: "lasote"
+    CONAN_USERNAME: "anton-matosov"
     CONAN_CHANNEL: "testing"
     CONAN_TOTAL_PAGES: 30
     CONAN_STABLE_BRANCH_PATTERN: "release/*"
