--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ sudo: required
 language: python
 env:
   global:
-    - CONAN_UPLOAD=1
+    - CONAN_UPLOAD="https://api.bintray.com/conan/anton-matosov/general"
     - CONAN_REFERENCE="Boost/1.64.0"
     - CONAN_USERNAME="anton-matosov"
     - CONAN_CHANNEL="testing"
