--- a/.travis.yml
+++ b/.travis.yml
@@ -62,37 +62,72 @@ env:
 matrix:
    include:
        - os: osx
-         osx_image: xcode8 # apple-clang 8
+         osx_image: xcode8.2 # apple-clang 8.0.0
          language: generic
          env: CONAN_CURRENT_PAGE=1
        - os: osx
-         osx_image: xcode8 # apple-clang 8
+         osx_image: xcode8.2 # apple-clang 8.0.0
          language: generic
          env: CONAN_CURRENT_PAGE=2
        - os: osx
-         osx_image: xcode8 # apple-clang 8
+         osx_image: xcode8.2 # apple-clang 8.0.0
          language: generic
          env: CONAN_CURRENT_PAGE=3
        - os: osx
-         osx_image: xcode8 # apple-clang 8
+         osx_image: xcode8.2 # apple-clang 8.0.0
          language: generic
          env: CONAN_CURRENT_PAGE=4
        - os: osx
-         osx_image: xcode8 # apple-clang 8
+         osx_image: xcode8.2 # apple-clang 8.0.0
          language: generic
          env: CONAN_CURRENT_PAGE=5
        - os: osx
-         osx_image: xcode8 # apple-clang 8
+         osx_image: xcode8.2 # apple-clang 8.0.0
          language: generic
          env: CONAN_CURRENT_PAGE=6
        - os: osx
-         osx_image: xcode8 # apple-clang 8
+         osx_image: xcode8.2 # apple-clang 8.0.0
          language: generic
          env: CONAN_CURRENT_PAGE=7
        - os: osx
-         osx_image: xcode8 # apple-clang 8
+         osx_image: xcode8.2 # apple-clang 8.0.0
          language: generic
          env: CONAN_CURRENT_PAGE=8
+
+
+       - os: osx
+         osx_image: xcode8.3 # apple-clang 8.1.0
+         language: generic
+         env: CONAN_CURRENT_PAGE=1
+       - os: osx
+         osx_image: xcode8.3 # apple-clang 8.1.0
+         language: generic
+         env: CONAN_CURRENT_PAGE=2
+       - os: osx
+         osx_image: xcode8.3 # apple-clang 8.1.0
+         language: generic
+         env: CONAN_CURRENT_PAGE=3
+       - os: osx
+         osx_image: xcode8.3 # apple-clang 8.1.0
+         language: generic
+         env: CONAN_CURRENT_PAGE=4
+       - os: osx
+         osx_image: xcode8.3 # apple-clang 8.1.0
+         language: generic
+         env: CONAN_CURRENT_PAGE=5
+       - os: osx
+         osx_image: xcode8.3 # apple-clang 8.1.0
+         language: generic
+         env: CONAN_CURRENT_PAGE=6
+       - os: osx
+         osx_image: xcode8.3 # apple-clang 8.1.0
+         language: generic
+         env: CONAN_CURRENT_PAGE=7
+       - os: osx
+         osx_image: xcode8.3 # apple-clang 8.1.0
+         language: generic
+         env: CONAN_CURRENT_PAGE=8
+
 
        - os: osx
          osx_image: xcode7.3 # apple-clang 7.0
@@ -126,6 +161,7 @@ matrix:
          osx_image: xcode7.3 # apple-clang 7.0
          language: generic
          env: CONAN_CURRENT_PAGE=8
+
 
        - os: osx
          osx_image: xcode7.1 # apple-clang 7.0
